--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -1,1 +1,18 @@
-shit
+\documentclass[12pt]{article} %the size of the font is in the brackets []
+\usepackage{fullpage}
+\usepackage{times}
+\usepackage{enumitem}
+\usepackage[normalem]{ulem}
+\usepackage{fancyhdr,graphicx,amsmath,amssymb, mathtools, scrextend, titlesec, enumitem}
+\usepackage[ruled,vlined]{algorithm2e}
+\usepackage{graphicx}
+
+
+\title{Lab 1 Report}
+\author{Aneel Damaraju, Andrew Pham}
+\date{09/04/18}
+\begin{document}
+	\maketitle
+	\section{Objective}
+	
+\end{document}
