--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -15,7 +15,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[numbered]{matlab-prettifier}
 
-\newcommand{\documentTitle}{Lab 1 - Basic Circuit Measurements}
+\newcommand{\documentTitle}{Lab 1 - Basic Electrical Measurements}
 \newcommand{\documentAuthor}{Aneel Damaraju, Andrew Pham}
 \newcommand{\courseTitle}{ELEC 240}
 \newcommand{\testDate}{September 04, 2018}
@@ -52,13 +52,13 @@
 	
 	\section{Objective}
 	
-	Your text here
+	This lab focuses on the fundamental tools and skills for electrical engineering laboratory work. This includes making current, voltage, and resistance measurements with a digital multimeter, creating graphs in MATLAB, and producing and measuring sinusoids with an oscilloscope and function generator. 
 	
 	\medskip
 	
-	\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
+	%\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
 	
-	\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
+	%\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
 	
 	\section{Materials}
 	
