objective, prelab, materials, references

--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -61,28 +61,56 @@
 	%\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
 	
 	\section{Materials}
-	
-	Your text here
+	Cabinet #5
+	\begin{itemize}
+		\item Digital Multimeter (DMM)
+		\item MATLAB
+		\item Banana Plug Cords
+		\item Battery Pack 
+		\item 2 AA batteries
+		\item Lightbulb Socket Board
+		\item 10 equal resistant (of any resistance)
+		\item VirtualBench Software with Function Generator, Oscilloscope, and DC power supply
+		\item BNC to Banana Plug Adapter
+		\item Breadboard
+		
+	\end{itemize}
 	
 	\medskip
 	
-	\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
+	%\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
 	
 	\section{Test Description}
 	
-	Your text here
+	\begin{enumerate}
+		\item \textbf{Measuring Voltage with the DMM} We measured the voltage of the battery alone and then the voltage of the lightbulb when connected in series with the battey. 
+		\item \textbf{Measuring Current With DMM} We measured current of the circuit with the lightbulb by putting the DMM in series with the lightbulb. 
+		\item \textbf{Measuring Resistance with the DMM} We measured the resistance of various individual resistors (ie 330, 430, and 220 Ohms) and then measured the consistency of 10 460 Ohm resistors. 
+		\item \textbf{Measuring the I-V Characteristics of a Light Bulb} We connected the lightbulb to the DC power supply from the VirtualBench so we could vary the input voltage. We then took voltage and current measurements as we increased the voltage and noted the discrepancies between the Power Supply output readings and our own measurements of voltage and current. 
+		\item \textbf{Viewing Signals with the Oscilloscope} We created a 1kHz sine wave with the function generator then observed this sine wave with the oscilloscope. We observed the effects of changing the Time/Div and other positioning controls. 
+		\item \textbf{Making Quantitative Measurements with the Oscilloscope} We used the oscilloscope to measure the DC power supply, a sine wave, and a square wave. We took measurements of frequency and amplitude of the sine and square wave. 
+		\item \textbf{Testing Breadboard} Used a DMM to ensure that the breadboard had functional connections between important ports
+	\end{enumerate}
 	
 	\medskip
 	
-	\textit{Note (To be deleted): This section provides a summary of the test your team performed. Give enough information so readers can understand what you did, but do not go into the details of every step.}
+%	\textit{Note (To be deleted): This section provides a summary of the test your team performed. Give enough information so readers can understand what you did, but do not go into the details of every step.}
 	
 	\subsection{Pre-Lab Calculations and Schematics}
+	\begin{center}
+		\includegraphics[scale = 0.85]{supplemental/lightbulbgraph.png}
+		\newline
+		\includegraphics[scale = 0.85]{supplemental/resistorgraph.png}
+		\newline
+		\includegraphics[scale = 0.35]{supplemental/squarewave.png}
+	\end{center}
+
+
 	
-	Your text here
-	
+		
 	\medskip
 	
-	\textit{Note (To be deleted): Include the homework pre-calculations and schematics that serve as the initial setup for the test. Briefly explain the importance of each item you include. You may want to number your equations/figures so you can refer to them in later sections. Including photos of handwritten work is okay.}
+%	\textit{Note (To be deleted): Include the homework pre-calculations and schematics that serve as the initial setup for the test. Briefly explain the importance of each item you include. You may want to number your equations/figures so you can refer to them in later sections. Including photos of handwritten work is okay.}
 	
 	\section{Results and Discussion}
 	
@@ -94,19 +122,22 @@
 	
 	\section{References}
 	
-	Your text here
+	\begin{enumerate}
+		\item https://www.ece.rice.edu/~dpr2/elec240/lab1/
+	\end{enumerate}
 	
 	\medskip
 	
-	\textit{Note (To be deleted): List any datasheets, websites, lab procedure, etc. used during the lab.}
+%\textit{Note (To be deleted): List any datasheets, websites, lab procedure, etc. used during the lab.}
+	
 	
 	\section{Conclusion}
 	
-	Your text here
+	
 	
 	\medskip
 	
-	\textit{Note (To be deleted): While the ``Results and Discussion'' section focused on the test results individually, the ``Conclusion'' discusses the results in the context of the entire experiment. Usually, the objectives given in the ``Introduction'' are reviewed to determine whether the experiment succeeded. If the objectives were not met, you should analyze why the results were not as predicted.}
+	%textit{Note (To be deleted): While the ``Results and Discussion'' section focused on the test results individually, the ``Conclusion'' discusses the results in the context of the entire experiment. Usually, the objectives given in the ``Introduction'' are reviewed to determine whether the experiment succeeded. If the objectives were not met, you should analyze why the results were not as predicted.}
 	
 	\section{Errors}
 	
