--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -97,12 +97,25 @@
 %	\textit{Note (To be deleted): This section provides a summary of the test your team performed. Give enough information so readers can understand what you did, but do not go into the details of every step.}
 	
 	\subsection{Pre-Lab Calculations and Schematics}
+	
 	\begin{center}
-		\includegraphics[scale = 0.85]{supplemental/lightbulbgraph.png}
-		\newline
-		\includegraphics[scale = 0.85]{supplemental/resistorgraph.png}
-		\newline
-		\includegraphics[scale = 0.35]{supplemental/squarewave.png}
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale = 0.8]{supplemental/lightbulbgraph.png}
+			\caption{Finding the current vs voltage relationship in a light bulb through experimental tests with incremental increases in input voltage. As seen, the result was a nonlinear line.}
+		\end{figure}
+
+		\begin{figure}[H]
+		\centering
+		\includegraphics[scale = 0.8]{supplemental/resistorgraph.png}
+		\caption{Finding the current vs voltage relationship in a 1 kOhm resistor through experimental tests with incremental increases in input voltage. As seen, the result was a linear line.}
+		\end{figure}
+		
+		\begin{figure}[H]
+			\centering
+			\includegraphics[scale = 0.35]{supplemental/squarewave.png}
+			\caption{A print screen of the oscilloscope for a square wave created by the function generator, with a 50\% duty cycle. The shaded region represents a single period.}
+		\end{figure}
 	\end{center}
 
 
