--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -116,6 +116,11 @@
 			\includegraphics[scale = 0.35]{supplemental/squarewave.png}
 			\caption{A print screen of the oscilloscope for a square wave created by the function generator, with a 50\% duty cycle. The shaded region represents a single period.}
 		\end{figure}
+	\begin{figure}[H]
+		\centering
+		\includegraphics[scale = .8]{supplemental/Eleclabsketch.png}
+		\caption{A quick sketch of the square wave. As seen the voltage is 5V and the frequency is 1 kHz}
+	\end{figure}
 	\end{center}
 
 
