almost done with conclusion

--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -156,9 +156,9 @@ In kOhms: 4.61, 4.61, 4.59, 4.61, 4.63, 4.61, 4.63, 4.60, 4.61, 4.62. All of the
 	\item Resistance of the body through dry fingers: 1.325 MOhms with a resolution of .1 MOhms
 	\item Resistance of the body throuh wet fingers: 168 kOhms with a resolution of 10 kOhms
 	\item This change in resistance can be attributed to the fact that adding water to fingers increases the surface area of the contact of the leads to the skin, which leads to a decrease in resistance. Following Ohms law, with dry skin, a voltage of 6.625 kV would produce 5 mA of current
+	\subsubsection{Part D: Measuring the I-V Characteristics of the Light Bulb}
 	\item The resistance of the lightbulb is 4.8 Ohms. This is not the answer that we would expect from Ohm's law because a lightbulb is a non-Ohmic circuit element.
 	\item The DMM reads .01 fewer volts that the Virtualbench power supply, hinting a voltage drop somewhere in the small circuit.
-	\item
 	\item For a  1kOhm resistor, Ohms Law holds for all V
 	\end{itemize}
 
@@ -189,7 +189,23 @@ In kOhms: 4.61, 4.61, 4.59, 4.61, 4.63, 4.61, 4.63, 4.60, 4.61, 4.62. All of the
 	
 	
 	\section{Conclusion}
+	\subsection{Experiment 1.1: The DMM}
+	\qquad For Part A, we discovered that the voltage of the battery decreases when attached to a load because the internal resistance of the battery causes a voltage drop across the terminal when current flows through the battery. We learned that batteries are an approximation to an ideal voltage source, which means that the voltage will not remain constant when we draw current from the battery. \newline
 	
+	For Part B, we found that measuring the current in a circuit will cause the overall current of the circuit to decrease because the ammeter itself has an internal resistance that increases the overall resistance of the circuit. \newline
+	
+	For Part C, we found that almost none of the resistors were were equal to their stated resistance, likely because it is difficult to manufacture precise resistance values into resistors. However, we did find that all of them were within the stated tolerance range (which was 5\%). We also hypothesized that holding the leads to the probes between our fingers lead to inaccurate measurements because our fingers act as a parallel path for current to flow, leading to a less accurate measurement. \\
+	Measuring the batch of 10 resistors reveals that they are very precise in their manufacture; all are within 1\% of the stated resistance despite the fact that their stated tolerance was 5\%. It was also shown the tolerance of two equivalent resistors in series was the same percentage as if those two resistors were in parallel, which is equivalent to the percentage tolerance of a single resistor.\\
+	We then found that the resistance of a human body with wet fingers has a resistance of an order of magnitude less than a human body with dry fingers. We believe that the change of resistance with wet fingers occurs because water increases both the surface area of contact as well as the penetration of the leads into the skin, leading to higher electrical current with wet fingers over dry fingers. 
+	\newline
+	
+	For Part D, we found that a lightbulb is a non-ohmic circuit element, as seen by Fig. 1 with the nonlinear relationship. Specifically, the current does not increase proportionally to voltage at higher voltages. 
+	However, a resistor is an Ohmic circuit element, as seen by the linear line in Fig 2.
+	
+	\subsection{1.2: The Oscilloscope and Function Generator}
+	For Part A, we found that the measurements from the oscilloscope were slightly different from the settings on the function generator because it is difficult for the function generator to create a perfect sine wave and also because the oscilloscope likely takes measurements at discrete intervals which leads to inaccuracies. \newline
+	
+	For Part B, we hypothesized that we can measure the DC power supply with an oscilloscope to see how constant the current that the power supply produces is. The current is not perfectly constant because the power supply must rectify wall AC power into direct current. When we observe the square wave with the oscilloscope, we noticed that 
 	
 	
 	\medskip
@@ -198,10 +214,10 @@ In kOhms: 4.61, 4.61, 4.59, 4.61, 4.63, 4.61, 4.63, 4.60, 4.61, 4.62. All of the
 	
 	\section{Errors}
 	
-	Your text here
+	
 	
 	\medskip
 	
-	\textit{Note (To be deleted): Briefly list sources of error and discuss how to eliminate or deal with them}
+	%\textit{Note (To be deleted): Briefly list sources of error and discuss how to eliminate or deal with them}
 	
 \end{document}
