--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -69,7 +69,7 @@
 		\item Battery Pack 
 		\item 2 AA batteries
 		\item Lightbulb Socket Board
-		\item 10 equal resistant (of any resistance)
+		\item 10 equivalent resistors (of any resistance)
 		\item VirtualBench Software with Function Generator, Oscilloscope, and DC power supply
 		\item BNC to Banana Plug Adapter
 		\item Breadboard
@@ -167,8 +167,8 @@ In kOhms: 4.61, 4.61, 4.59, 4.61, 4.63, 4.61, 4.63, 4.60, 4.61, 4.62. All of the
 	\item For a  1kOhm resistor, Ohms Law holds for all V
 	\end{itemize}
 
-	\subsection{Experiment 1.2 The Oscilloscope and Function Generator}
-	\subsubsection{Viewing Signals with te Oscilloscope}
+	\subsection{Experiment 1.2: The Oscilloscope and Function Generator}
+	\subsubsection{Viewing Signals with the Oscilloscope}
 	\begin{itemize}
 	\item The numbers are slightly off from the function generator because of two factors, the first being that the generator is not perfectly able to create the given sine waves, and the second being that the oscilloscope uses various measurements and approximations to create its given outputs which cannot be perfectly accurate.
 	\item The duty cycle changes the ratio of time spent on the positive pulse vs the negative pulse
@@ -207,7 +207,7 @@ In kOhms: 4.61, 4.61, 4.59, 4.61, 4.63, 4.61, 4.63, 4.60, 4.61, 4.62. All of the
 	For Part D, we found that a lightbulb is a non-ohmic circuit element, as seen by Fig. 1 with the nonlinear relationship. Specifically, the current does not increase proportionally to voltage at higher voltages. 
 	However, a resistor is an Ohmic circuit element, as seen by the linear line in Fig 2.
 	
-	\subsection{1.2: The Oscilloscope and Function Generator}
+	\subsection{Experiment 1.2: The Oscilloscope and Function Generator}
 	For Part A, we found that the measurements from the oscilloscope were slightly different from the settings on the function generator because it is difficult for the function generator to create a perfect sine wave and also because the oscilloscope likely takes measurements at discrete intervals which leads to inaccuracies. \newline
 	
 	For Part B, we hypothesized that we can measure the DC power supply with an oscilloscope to see how constant the current that the power supply produces is. The current is not perfectly constant because the power supply must rectify wall AC power into direct current. When we observe the square wave with the oscilloscope, we observed that the measured frequency was highly similar to the set frequency. 
