--- a/lab1/lab1report.tex
+++ b/lab1/lab1report.tex
@@ -60,7 +60,10 @@
 	
 	%\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
 	
-	\section{Materials}
+	\section{Materials and Pre-Lab}
+	
+	Prelab consisted of getting assigned lab equipment (assigned locker \#5). Gathered all relevant materials listed below. 
+	No preliminary calculations were necessary for this lab. 
 	
 	\begin{itemize}
 		\item Digital Multimeter (DMM)
