added objectives and materials section

--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -52,29 +52,46 @@
 
 \section{Objective}
 
-Your text here
+In this lab, we explored how to detect and change signals through the use of electroacoustic transducers. In the first section, we observed the various properties of a signal such as its frequency and amplitude through a speaker and calculated how measuring this signal with the speaker affects the circuit. In the second section, we now produced signals through various methods like our vocal cords and the lab PC and viewed these signal properties on the oscilloscope. Finally, in section three, we independently viewed the signal properties of a photodiode and a light-emitting diode, then combined the two to view how a light-emitting diode can send signals to a photoresistor to achieve optoelectronic communication. 
 
 \medskip
 
-\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
+%\textit{Note (To be deleted): Think of this test report as a document with your peers as your readers. This means you can assume a similar knowledge background as you. Your readers should be able to easily understand what is going on, and also be able to repeat your lab results based on your document and all references you cite.}
 
-\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
+
+
+%\textit{For the Objective section, identify the test you performed and its objectives. The objectives of the test are important to state because they are usually analyzed in the conclusion to determine whether the test succeeded.}
 
 \section{Materials}
 
-Your text here
+\begin{itemize}
+	\item Virtual Bench (Software, Oscilloscope, Function Generator, DC Power Supply)
+	\item BNC Male to Clips cord
+	\item Oscilloscope Probe
+	\item Speaker
+	\item Breadboard
+	\item Microphone
+	\item 2 10 cm length wires (with 6 mm stripped on each end)
+	\item Lab PC with associated sound files and sound card cable
+	\item Photodiode 
+	\item Red LED
+	\item BNC Banana Adapter
+	\item Digital Multimeter
+	\item 220 Ohm Resistor
+\end{itemize}
 
 \medskip
 
-\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
+%\textit{Note (To be deleted): Provide a bullet point list of components, software tools, and hardware (such as the NI VirtualBench or DMM) used during the lab}
 
 \section{Test Description}
 
-Your text here
+\subsection{Electroacoustic Transducers I}
+We began by creating a 1kHz sine wave, connecting this signal to a speaker, and listening to the signal in audio form. We then varied the parameters of the input signal to listen to the effects on the output signal. 
 
 \medskip
 
-\textit{Note (To be deleted): This section provides a summary of the test your team performed. Give enough information so readers can understand what you did, but do not go into the details of every step.}
+%\textit{Note (To be deleted): This section provides a summary of the test your team performed. Give enough information so readers can understand what you did, but do not go into the details of every step.}
 
 \subsection{Pre-Lab Calculations and Schematics}
 
