--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -87,7 +87,13 @@ In this lab, we explored how to detect and change signals through the use of ele
 \section{Test Description}
 
 \subsection{Electroacoustic Transducers I}
-We began by creating a 1kHz sine wave, connecting this signal to a speaker, and listening to the signal in audio form. We then varied the parameters of the input signal to listen to the effects on the output signal. 
+We began by creating a 1kHz sine wave, connecting this signal to a speaker, and listening to the signal in audio form. We then varied the parameters of the input signal to listen to the effects on the output signal. Then using these measurements, we found the Thevenin voltage, and used this value to attempt to find the maximum power transfer.
+
+\subsection{Electroacoustic Transducers II}
+This time, we varied the input of the oscilloscope by attaching it to a microphone. After making various sounds into the microphone and visualizing the signals, we attempted to qualitatively analyze the signals created by vowels sounds created by humans as well as a virtual piano. After this, we attempted to analyze various given audio signals through the use of a speaker and the oscilloscope attached to the sound card cable of the computer playing the sounds.
+
+\subsection{Optoelectrical Signal Sources and Sinks}
+We created a simple circuit connecting a photodiode to the oscilloscope and observed the AC and DC signals created by this circuit before and after covering the diode with a hand. After this a LED was connected to the DC power supply. and qualitative observations were recorded while varying the amplitude and frequency of the incoming voltage. Then the optical source and sink were combined, and the measurement across the photodiode was read as it received signals from blinking LED.
 
 \medskip
 
@@ -95,7 +101,7 @@ We began by creating a 1kHz sine wave, connecting this signal to a speaker, and 
 
 \subsection{Pre-Lab Calculations and Schematics}
 
-Your text here
+No pre-lab calculations were needed, but 
 
 \medskip
 
