changed images folder and began results section

--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -109,11 +109,49 @@ No pre-lab calculations were needed, but
 
 \section{Results and Discussion}
 
-Your text here
+\subsection{Experiment 2.1: Electrostatic Transducers I}
+\subsubsection{Part A}
+\begin{itemize}
+	\item After connecting the 1kHz sine wave to the speaker, we heard a constant-pitch sound from the speaker.
+	\item Measuring the voltage signal with an oscilliscope yielded a peak-to-peak measurement of 164.6 mV. This is because the speaker acts as a resistor, causing a proportional drop in voltage amplitude of the input signal. 
+	\item We then varied the parameters of the input signal. Increasing the frequency increases the pitch of the tone. Increasing the amplitude of the tone increases the volume of the tone. By changing the sinusoid to a square wave, the sound becomes a flatter, more piercing tone. 
+\end{itemize}
+
+\subsubsection{Part B: Thevenin Equivalent and Maximum Power Transfer}
+ 
+
+\subsection{Experiment 2.2: Electrostatic Transducers II}
+\subsubsection{Part A: Microphone}
+\begin{itemize}
+	\item We connected the connected the microphone to the oscilloscope by first connecting the microphone to the J1-4 port on the breadboard, then connecting the J1-4 to the J1-1 port, then connecting the oscilloscope to that J1-1 port. We then whistled into the microphone. We adjusted the trigger to 5 mV above the origin. By doing so, we were able to essentially "freeze" the sinusoid so that we could better view its properties. 
+	\item We then sang the 5 vowel sounds into the microphone. We found that the vowel A was the most sinusoid-like. Attached below is the sound of an "A" in comparison to the sound of "O". 
+\end{itemize}
+
+\begin{enumerate}
+	\item  We then played a perfect "A" tone off a smartphone speaker into the microphone. The resulting signal was a near-perfect sine wave. 
+\end{enumerate}
+
+\begin{center}
+	\begin{figure} [H]
+		\centering
+		\includegraphics[scale=0.22]{images/aaa.png}
+		\caption{Sine Wave of Vocally Produced Vowel "A" Sound}
+	\end{figure}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.22]{images/ooo.png}
+		\caption{Sine Wave of Vocally Produced "O" Sound for comparison}
+	\end{figure}
+\end{center}
+
+
+
+
+
 
 \medskip
 
-\textit{Note (To be deleted): The heart of your report is the presentation of your results and a discussion of those results. In your discussion, you should not only analyze your results, but also discuss the implications of those results.}
+%\textit{Note (To be deleted): The heart of your report is the presentation of your results and a discussion of those results. In your discussion, you should not only analyze your results, but also discuss the implications of those results.}
 
 \section{References}
 
