--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -101,7 +101,14 @@ We created a simple circuit connecting a photodiode to the oscilloscope and obse
 
 \subsection{Pre-Lab Calculations and Schematics}
 
-No pre-lab calculations were needed, but 
+\begin{center}
+	\begin{figure} [H]
+		\centering
+		\includegraphics[scale=0.22]{images/aaa.png}
+		\caption{Given Pre-lab Schematic to understand load resistances for the purpose of Thevenin Voltages}
+	\end{figure}
+\end{center}
+No pre-lab calculations were needed, but understanding of \textit{Figure 1} was important. This figure highlights the importance of not discrediting the resistance of the  measuring instrument. This is important in Experiment 2.1 for the understanding of Thevenin equivalents.
 
 \medskip
 
@@ -132,12 +139,12 @@ No pre-lab calculations were needed, but
 \end{enumerate}
 
 \begin{center}
-	\begin{figure} [H]
+	\begin{figure}[H]
 		\centering
 		\includegraphics[scale=0.22]{images/aaa.png}
 		\caption{Sine Wave of Vocally Produced Vowel "A" Sound}
 	\end{figure}
-	\begin{figure}
+	\begin{figure}[H]
 		\centering
 		\includegraphics[scale=0.22]{images/ooo.png}
 		\caption{Sine Wave of Vocally Produced "O" Sound for comparison}
@@ -155,19 +162,20 @@ No pre-lab calculations were needed, but
 
 \section{References}
 
-Your text here
-
+	\begin{enumerate}
+		\item https://www.ece.rice.edu/~dpr2/elec240/lab1/
+	\end{enumerate}
 \medskip
 
-\textit{Note (To be deleted): List any datasheets, websites, lab procedure, etc. used during the lab.}
 
 \section{Conclusion}
+\subsection{Experiment 2.1: Electroacoustic Transducers I}
+s
 
-Your text here
 
 \medskip
 
-\textit{Note (To be deleted): While the ``Results and Discussion'' section focused on the test results individually, the ``Conclusion'' discusses the results in the context of the entire experiment. Usually, the objectives given in the ``Introduction'' are reviewed to determine whether the experiment succeeded. If the objectives were not met, you should analyze why the results were not as predicted.}
+
 
 \section{Errors}
 
