--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -104,7 +104,7 @@ We created a simple circuit connecting a photodiode to the oscilloscope and obse
 \begin{center}
 	\begin{figure} [H]
 		\centering
-		\includegraphics[scale=0.22]{images/aaa.png}
+		\includegraphics[scale=0.22]{images/prelab.png}
 		\caption{Given Pre-lab Schematic to understand load resistances for the purpose of Thevenin Voltages}
 	\end{figure}
 \end{center}
@@ -170,7 +170,14 @@ No pre-lab calculations were needed, but understanding of \textit{Figure 1} was 
 
 \section{Conclusion}
 \subsection{Experiment 2.1: Electroacoustic Transducers I}
-s
+\qquad For Part A: we found that changing the two major properties of a sine wave, the frequency and the amplitude have direct effects on the output sound as the signal travels through a speaker. Increasing the frequency increases the pitch, and increases the amplitude increases the volume.
+
+For Part B: 
+
+\subsection{Experiment 2.2: Electroacoustic Transducers II}
+For Part A: Instead of using a function generator to create an output, we used our own voices through a microphone to create signals. These signals were not as clear as the function generated signals, but it was obvious that they had the same relation to the frequency and amplitude. When this test was done for all vowels, it was clear that the "a" sound was the most sinusoidal, which makes sense when understanding why it is such a popular tuning frequency and an actual musical note. We also used the trigger function to better understand these irregular tones, as it helped to notice periodicity. There were also some interesting comparisons to be made when looking at the difference in our (poorly) sung "a" tone and the computer generated one. The computer generated tone was much more steady than the sung tone, even if it did not sound obvious it was visually obvious. 
+
+For Part B: Like Part A was comparing sounds and created waveforms, so was this Part, except with more complex sound files. 
 
 
 \medskip
