ffinished some changes

--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -192,6 +192,7 @@ We then set the oscilloscope to measure AC signals from the photodiode. The peak
 
 	\begin{enumerate}
 		\item https://www.ece.rice.edu/~dpr2/elec240/lab1/
+		https://www.youtube.com/watch?v=BzNzgsAE4F0 \textit{information on Shepard tones}
 	\end{enumerate}
 \medskip
 
@@ -205,8 +206,15 @@ For Part B:
 \subsection{Experiment 2.2: Electroacoustic Transducers II}
 For Part A: Instead of using a function generator to create an output, we used our own voices through a microphone to create signals. These signals were not as clear as the function generated signals, but it was obvious that they had the same relation to the frequency and amplitude. When this test was done for all vowels, it was clear that the "a" sound was the most sinusoidal, which makes sense when understanding why it is such a popular tuning frequency and an actual musical note. We also used the trigger function to better understand these irregular tones, as it helped to notice periodicity. There were also some interesting comparisons to be made when looking at the difference in our (poorly) sung "a" tone and the computer generated one. The computer generated tone was much more steady than the sung tone, even if it did not sound obvious it was visually obvious. 
 
-For Part B: Like Part A was comparing sounds and created waveforms, so was this Part, except with more complex sound files. 
+For Part B: Like Part A was comparing sounds and created waveforms, so was this Part, except with more complex sound files. The first two files, a sine wave and a gong noise, were very straight forward, and it was clear that the gong fading was easily represented by the decaying amplitude of the sounds as seen in the images provided by the oscilloscope. The mystery signal was more interesting, after it was clear that what sounded like a chromatic scale was actually a combination of a couple of various sounds repeated over and over. When research was done into this pattern, it was discovered to be called a Shepard tone, which is a superposition of octaves at varying amplitudes that creates the feeling of each note sounding slightly different from each other.
 
+\subsection{Experiment 2.3: Optoelectrical Signal Sources and Sinks}
+
+For Part A: The photodiode is essentially a tiny solar cell, so it was no surprise when the change in light shining into the diode changed the output voltage. However,the output waveform is very interesting. It looks like a low frequency wave, which we hypothesized to be the diode frequency, encompassing a higher frequency wave, which we hypothesized to be the ambient light frequency.
+
+For Part B: The LED did not light at low voltages, probably because the current flowing through the circuit was not enough to produce a visible light. However, when the light was lit, increasing the voltage provided a clear increase in brightness. The including a square wave with varying frequencies provided interesting information as well, including the threshold at which we could see the flickering of the light, 40 Hz. This value is higher than that of movies, but of course we were much closer to the source and only looking at a single changing light which could have impacted our measurements. 
+
+For Part C: The waveform is almost what was expected for a square wave, just with a small falloff at the end of the waveform. The triangle wave was less expected, because the diode should only see part of the waveform due to the nature of the diode. The recognizable signals
 
 \medskip
 
