--- a/lab2/labreport2.tex
+++ b/lab2/labreport2.tex
@@ -178,6 +178,7 @@ We then set the oscilloscope to measure AC signals from the photodiode. The peak
 		\centering
 		\includegraphics[scale = 0.22]{images/zoom.png}
 		\caption{Oscilloscope Reading of AC signal from Photodiode}
+		\label{fig:zoom}
 	\end{figure}
 \end{center}
 
@@ -214,15 +215,14 @@ For Part A: The photodiode is essentially a tiny solar cell, so it was no surpri
 
 For Part B: The LED did not light at low voltages, probably because the current flowing through the circuit was not enough to produce a visible light. However, when the light was lit, increasing the voltage provided a clear increase in brightness. The including a square wave with varying frequencies provided interesting information as well, including the threshold at which we could see the flickering of the light, 40 Hz. This value is higher than that of movies, but of course we were much closer to the source and only looking at a single changing light which could have impacted our measurements. 
 
-For Part C: The waveform is almost what was expected for a square wave, just with a small falloff at the end of the waveform. The triangle wave was less expected, because the diode should only see part of the waveform due to the nature of the diode. The recognizable signals
+For Part C: The waveform is almost what was expected for a square wave, just with a small falloff at the end of the waveform. The triangle wave was less expected, because the diode should only see part of the waveform due to the nature of the diode. The recognizable light pattern from the LED was picked up by the photodiode up to a distance of 2 feet, in optimal conditions such as behind a jacket. This technology is used in optical fibers today.
 
 \medskip
 
-
-
+Figure \ref{fig:zoom}
 \section{Errors}
 
-Your text here
+There are some errors that can be attributed to tolerance, and instrument errors that are always the case. There are some other errors that can be attributed to miscalculations and human error, such as those that including finding the threshold frequency or volume. Attempting to recreate this results mat lead to inaccurate answers due to changes in an individuals sensory perception.
 
 \medskip
 
